--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   json_annotation: ^4.4.0
   shared_preferences: ^2.0.13
   uuid: ^3.0.6
+  flutter_hooks: ^0.18.2+1
 
 dev_dependencies:
   build_runner: ^2.1.8
