--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,22 +28,25 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   auto_route: ^3.2.4
-  
+  confetti: ^0.6.0
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.18.2+1
+  flutter_localizations:
+    sdk: flutter
   flutter_riverpod: ^1.0.3
   freezed_annotation: ^1.1.0
+  intl: ^0.17.0
+  intl_utils: ^2.6.1
   json_annotation: ^4.4.0
   shared_preferences: ^2.0.13
   uuid: ^3.0.6
-  flutter_hooks: ^0.18.2+1
-  confetti: ^0.6.0
 
 dev_dependencies:
-  build_runner: ^2.1.8
   auto_route_generator: ^3.2.3
+  build_runner: ^2.1.8
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -67,7 +70,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/throphy.png
-     
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
@@ -91,3 +93,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_intl:
+  enabled: true # Required. Must be set to true to activate the package. Default: false
+  class_name: S # Optional. Sets the name for the generated localization class. Default: S
+  main_locale: es # Optional. Sets the main locale used for generating localization files. Provided value should consist of language code and optional script and country codes separated with underscore (e.g. 'en', 'en_GB', 'zh_Hans', 'zh_Hans_CN'). Default: en
+  arb_dir: lib/locale/arb_files # Optional. Sets the directory of your ARB resource files. Provided value should be a valid path on your system. Default: lib/l10n
+  output_dir: lib/locale
