--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   json_annotation: ^4.4.0
   shared_preferences: ^2.0.13
   uuid: ^3.0.6
+  responsive_framework: ^0.1.7
 
 dev_dependencies:
   auto_route_generator: ^3.2.3
